[project]
name = "dhv"
version = "0.1.0"
description = "Coming eventually"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=3.5.0",
    "textual-enhanced>=0.13.0",
    "textual-fspicker>=0.4.1",
    "xdg-base-dirs>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
dhv = "dhv.__main__:main"

[build-system]
# https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3", "hatch-vcs"]
# requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.2.0",
    "mypy>=1.16.1",
    "textual-dev>=1.7.0",
    "codespell>=2.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dhv"]
